<resources>
    <string name="app_name">Flight Club</string>
    <string name="login_title"><u>Flight Club</u></string>
    <string name="dont_have_acct"><u>"Don't have an account? <b>Sign up here!</b>"</u></string>
    <string name="sign_in">sign in</string>
    <string name="password">Password</string>
    <string name="email_address">Email </string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="SignUpButton_text">Sign Up</string>
    <string name="createAccount_title">Create Your Account!</string>
    <string name="ReturnToLoginText"><b><u>Return To Login</u></b></string>
    <string name="first_Name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_account"><b><u>My Account</u></b></string>
    <string name="my_cart"><b><u>My Cart</u></b></string>
    <string name="Setting"><b><u>Settings</u></b></string>
    <string name="flights_category"><b>FLIGHTS</b></string>
    <string name="cars_category"><b>CARS</b></string>
    <string name="hotels_category"><b>HOTELS</b></string>
    <string name="entertainment_category"><b>ENTERTAINMENT</b></string>
    <string name="title_activity_change_email">changeEmailActivity</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_text">Change password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="current_password">Current password</string>
    <string name="change_e_mail">Change Email</string>
    <string name="change_email">Change Email</string>
    <string name="confirm_new_email">Confirm New Email</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="airports_array">
        <item>MCO (Orlando Int\'l Airport)</item>
        <item>JFK (John F. Kennedy Int\'l)</item>
        <item>ATL (Atlanta Int\'l Airport)</item>
        <item>LAX (Los Angeles Int\'l Airport)</item>
        <item>ORD (O\'Hare Int\'l Airport)</item>
        <item>DFW (Dallas/Fort Worth Int\'l Airport)</item>
        <item>DEN (Denver Int\'l Airport)</item>
        <item>SFO (San Francisco Int\'l Airport)</item>
        <item>CLT (Charlotte Douglas Int\'l Airport)</item>
        <item>LAS (McCarran Int\'l Airport)</item>
        <item>PHX (Phoenix Sky Harbor Int\'l Airport)</item>
        <item>MIA (Miami Int\'l Airport)</item>
        <item>IAH (George Bush Int\'l Airport)</item>
        <item>SEA (Seattle-Tacoma Int\'l Airport)</item>
        <item>EWR (Newark Liberty Int\'l Airport)</item>
    </string-array>

    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="CreditCardNumberHelp"></string>
    <string name="ExpirationDateHelp">Expiration Date (MM/YY)</string>
    <string name="SecurityCodeHelp">Security Code (CVV)</string>
    <string name="ZipHelp">Zip Code Of Billing Address</string>
    <string name="insert_package_information_here">Insert Package Information Here</string>
</resources>
