<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamflightclub.flightclub.CreateAccountActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        >

        <TextView
            android:text="@string/createAccount_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createAccount_header"
            tools:text="string/createAccount_title"
            android:textSize="50sp"
            android:textAlignment="center"
            android:paddingBottom="30dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/firstName_createAccount"
                android:hint="@string/first_Name"
                android:layout_weight="1"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/lastName_createAccount"
                android:layout_weight="1"
                android:hint="@string/last_name"
                />

        </LinearLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/emailAddress_createAccount"
                android:hint="@string/email_address"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:id="@+id/password_createAccount"
                android:hint="@string/password"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/confirmPassword_createAccount"
                android:hint="@string/confirm_password"
                />

            <Button
                android:text="@string/SignUpButton_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/createAccountButton"
                android:onClick="SignUp"/>

            <TextView
                android:text="@string/ReturnToLoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/returnToLoginLink"
                android:clickable="true"
                android:onClick="returnToLogin"
                android:textAlignment="center"
                />

    </LinearLayout>


</FrameLayout>
