<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamflightclub.flightclub.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id = "@+id/flight_category_button"
            android:text="@string/flights_category"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id = "@+id/hotels_category_button"
            android:text="@string/hotels_category"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:paddingTop="85dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id = "@+id/cars_category_button"
            android:text="@string/cars_category"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:id = "@+id/entertainment_category_button"
            android:text="@string/entertainment_category"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@android:color/darker_gray"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/my_cart"
            android:gravity="center"
            android:id = "@+id/my_cart_bar_button"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/my_account"
            android:gravity="center"
            android:id = "@+id/my_account_bar_button"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Setting"
            android:gravity="center"
            android:id = "@+id/settings_bar_button"
            android:paddingLeft="4dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"/>

    </LinearLayout>


</FrameLayout>
