<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamflightclub.flightclub.ChangePasswordActivity">

    <TextView
        android:text="@string/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_text"
        android:layout_marginTop="64dp"
        android:layout_alignParentTop="true"
        android:textSize="35sp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/newconfirmPassword_changepassword"
        android:hint="@string/confirm_new_password"

        android:layout_below="@+id/currentPassword_changepassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/currentPassword_changepassword"
        android:hint="@string/new_password"
        android:layout_below="@+id/newPassword_changepassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/change_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/change_password_button"
        android:layout_below="@+id/newconfirmPassword_changepassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/newPassword_changepassword"
        android:hint="@string/current_password"

        android:layout_marginTop="37dp"
        android:layout_below="@+id/change_password_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
