<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.teamflightclub.flightclub.ChangeEmailActivity">

    <TextView
        android:text="@string/change_e_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/change_Email_text"
        android:layout_marginTop="64dp"
        android:layout_alignParentTop="true"
        android:textSize="35sp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:id="@+id/newconfirmEmail_changeEmail"
        android:hint="@string/confirm_new_email"
        android:layout_below="@+id/newEmail_changeEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:id="@+id/newEmail_changeEmail"
        android:hint="@string/new_email"
        android:layout_below="@+id/currentEmail_changeEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="TextFields" />

    <Button
        android:text="@string/change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/change_Email_button"
        android:layout_below="@+id/newconfirmEmail_changeEmail"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currentEmail_changeEmail"
        android:hint="@string/current_email"
        android:inputType="textWebEmailAddress"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/change_Email_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="TextFields" />


</RelativeLayout>
